--- a/index.html
+++ b/index.html
@@ -51,16 +51,31 @@
         </nav>
         <header class = "header">
             <div class= "searchbar">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>magnify</title><path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" /></svg>
-                <input type="text" placeholder="Search"></input>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>Search</title><path d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" /></svg>
+                <input type="text" placeholder="   Search"></input>
             </div>
             <div class="user-links">
                 
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>bell-ring</title><path d="M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21M19.75,3.19L18.33,4.61C20.04,6.3 21,8.6 21,11H23C23,8.07 21.84,5.25 19.75,3.19M1,11H3C3,8.6 3.96,6.3 5.67,4.61L4.25,3.19C2.16,5.25 1,8.07 1,11Z" /></svg>
-                <svg class = "user-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>circle</title><path d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
-                <image href = "/assets/huskylogo.jpg" width="100%"  height="100%" />
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>bell-outline</title><path d="M10 21H14C14 22.1 13.1 23 12 23S10 22.1 10 21M21 19V20H3V19L5 17V11C5 7.9 7 5.2 10 4.3V4C10 2.9 10.9 2 12 2S14 2.9 14 4V4.3C17 5.2 19 7.9 19 11V17L21 19M17 11C17 8.2 14.8 6 12 6S7 8.2 7 11V18H17V11Z" /></svg>
+                <svg class = "user-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>Profile Picture</title><path d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
+                <image href = "/assets/husky!.png" width="100%"  height="100%" />
                 </svg>
                 <h3>John Doe</h3>
+            </div>
+            <div class="greeting">
+                <svg class = "user-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>Profile Picture</title><path d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
+                    <image href = "/assets/husky!.png" width="100%"  height="100%" />
+                </svg>
+                
+                <div class = "info">
+                    <h5>Hi there,</h5>
+                    <h2>John Doe @jDoe</h2>
+                </div>
+            </div>
+            <div class="functions">
+                <button class = "func-button" type="button">New</button>
+                <button class = "func-button" type="button">Upload</button>
+                <button class = "func-button" type="button">Share</button>
             </div>
         </header>
         <div class = "main-content"></div>
