--- a/index.html
+++ b/index.html
@@ -78,6 +78,65 @@
                 <button class = "func-button" type="button">Share</button>
             </div>
         </header>
-        <div class = "main-content"></div>
+        <div class = "main-content">
+            <div class = "projects">
+                <h3>Your Projects</h3>
+                <ul>
+                    <li>
+                      <a href="#">
+                        <h2>Title #1</h2>
+                        <p>Text Content #1</p>
+                      </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                          <h2>Title #2</h2>
+                          <p>Text Content #1</p>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <h2>Title #3</h2>
+                          <p>Text Content #1</p>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <h2>Title #4</h2>
+                          <p>Text Content #1</p>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <h2>Title #1</h2>
+                          <p>Text Content #1</p>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <h2>Title #5</h2>
+                          <p>Text Content #1</p>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <h2>Title #6</h2>
+                          <p>Text Content #1</p>
+                        </a>
+                      </li>
+                </ul>
+                        
+
+
+            </div>
+            <div class = "announcement">
+
+            </div>
+            <div class = "trending">
+
+            </div>
+
+
+        </div>
 </body>
 </html>
