--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
             <div class="greeting">
                 <svg class = "user-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>Profile Picture</title><path d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
-                    <image href = "assets/husky!.png" width="100%"  height="100%" />
+                   <!---- <image href = "assets/husky!.png" width="100%"  height="100%" />-->
                 </svg>
                 
                 <div class = "info">
