--- a/index.html
+++ b/index.html
@@ -165,26 +165,26 @@
                 
                 <article class = "trending-item trending-user1">
                   <svg class = "user-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>Profile Picture</title><path d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
-                    <image href = "/assets/husky!.png" width="100%"  height="100%" />
+                    <image href = "assets/husky!.png" width="100%"  height="100%" />
                     </svg>
                     <span class = "user-trending-info"><p>@tegan</p><p>World Peace Builder</p> </span>
                 </article>
                 <article class = "trending-item trending-user2">
                   <svg class = "user-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>Profile Picture</title><path d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
-                    <image href = "/assets/husky!.png" width="100%"  height="100%" />
+                    <image href = "assets/husky!.png" width="100%"  height="100%" />
                     </svg>
                     <span class = "user-trending-info"><p>@morgan</p><p>Super Cool Project</p> </span>
                 </article>
                 <article class = "trending-item trending-user3">
                   <svg class = "user-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>Profile Picture</title><path d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
-                    <image href = "/assets/husky!.png" width="100%"  height="100%" />
+                    <image href = "assets/husky!.png" width="100%"  height="100%" />
                     </svg>
                     <span class = "user-trending-info"><p>@kendall</p><p>Life Changning App</p> </span>
 
                 </article>
                 <article class = "trending-item trending-user4">
                   <svg class = "user-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>Profile Picture</title><path d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
-                    <image href = "/assets/husky!.png" width="100%"  height="100%" />
+                    <image href = "assets/husky!.png" width="100%"  height="100%" />
                     </svg>
                     <span class = "user-trending-info"><p>@alex</p><p>No Traffic Maker</p> </span>
                 </article>
